Change NdkCxxPlatforms shared runtime path to a SourcePath
Summary:
Toolchain paths should be defined as SourcePath so that they can be
correctly added to rulekeys and so that they can reference outputs of
build rules.

Reviewed By: bobyangyf

fbshipit-source-id: b8e7b923a7