@@ -22,6 +22,7 @@ import com.facebook.buck.android.toolchain.ndk.NdkCxxRuntime;
 import com.facebook.buck.android.toolchain.ndk.TargetCpuType;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.targetgraph.AbstractNodeBuilder;
+import com.facebook.buck.core.sourcepath.FakeSourcePath;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
 import com.facebook.buck.core.sourcepath.SourcePath;
 import com.facebook.buck.core.toolchain.ToolchainProvider;
@@ -51,7 +52,7 @@ public class NdkLibraryBuilder
       NdkCxxPlatform.builder()
           .setCxxPlatform(CxxPlatformUtils.DEFAULT_PLATFORM)
           .setCxxRuntime(NdkCxxRuntime.GNUSTL)
-          .setCxxSharedRuntimePath(Paths.get("runtime"))
+          .setCxxSharedRuntimePath(FakeSourcePath.of("runtime"))
           .setObjdump(new CommandTool.Builder().addArg("objdump").build())
           .build();
 
